Fix code padding overflow

--- a/docs/index.css
+++ b/docs/index.css
@@ -64,7 +64,7 @@ code {
   background-color: #3c3c42;
   border-radius: 6px;
   color: #e9c46a;
-  padding: 0.4em 0.6em;
+  padding: 0.2em 0.4em;
   font-family: "Courier New", monospace;
 }
 
